--- a/Biodata.html
+++ b/Biodata.html
@@ -17,9 +17,11 @@
             <ul>
             <li>2020-Sekarang: Universitas Muhammadiyah Malang</li>
             <li>2017-2020    : SMA Negeri 1 Tarakan</li>
+            <li>2015-2017    : SMP Negeri 2 Tarakan</li>
             </ul>
     <h5>Kontak Saya</h5>
     <p><a href="https://www.instagram.com/jasminevt/">instagram</a></p>
     <p><a href="https://www.linkedin.com/in/jasminnefridayanti/">Linkedin</a></p>
+
     </body>
 </html>
