--- a/Biodata.html
+++ b/Biodata.html
@@ -22,6 +22,7 @@
     <h5>Kontak Saya</h5>
     <p><a href="https://www.instagram.com/jasminevt/">instagram</a></p>
     <p><a href="https://www.linkedin.com/in/jasminnefridayanti/">Linkedin</a></p>
+    <p><a href="portofolio.html"> Portofolio</a></p>
 
     </body>
 </html>
