--- a/Biodata.html
+++ b/Biodata.html
@@ -1,11 +1,18 @@
 <html>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <title>Document</title>
+    </head>
     <body>
-        <h1>Jasminne Fridayanti Putri Safrida</h1>
+        <h1 id="name">Jasminne Fridayanti Putri Safrida</h1>
             <img src="photo.png" alt="images"style="width:200px ; height: 300px;">
         <br> 
-        <h2>Tentang Saya</h2>
+        <h2 id="desc">Tentang Saya</h2>
             <p align="justify"> Saya adalah mahasiswa ilmu pemerintahan semester 5 di Universitas Muhammadiyah. <br> Saya memiliki kepribadian ambivert, dimana saya suka bertemu dengan orang baru tetapi suatu waktu saya memilih waktu untuk sendiri agar dapat menangkan pikiran.<br> Hobi saya adalah memasak, berpetualang, mendengarkan musik, dan scroll twitter. Saya bermimpi ingin sekali menjadi bagian dari Kementerian Negara.</p>
-        <h3>Keahlian Saya</h3>
+        <h3 id="desc">Keahlian Saya</h3>
             <ol>
             <li>Public Speaking</li>
             <li>Account Management</li>
@@ -13,7 +20,7 @@
             <li>Research and Analyst</li>
             <li>Leadership</li>
             </ol>
-        <h4>Pendidikan Saya</h4>
+        <h4 id="desc">Pendidikan Saya</h4>
             <ul>
             <li>2020-Sekarang: Universitas Muhammadiyah Malang</li>
             <li>2017-2020    : SMA Negeri 1 Tarakan</li>
