--- a/portofolio.html
+++ b/portofolio.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Membuat Portofolio</title>
 </head>
 <body>
-   
-    <h1>Jasminne's Portofolio</h1> 
-<img src="picture.jpg" alt="images"style="width:500px ; height: 250px;">
+
+    <h1 id="judul">Jasminne's Portofolio</h1> 
+    <img src="picture.jpg" alt="images"style="width:500px ; height: 250px;">
 
     <table border="3">
         <tr>
