--- a/portofolio.html
+++ b/portofolio.html
@@ -8,7 +8,12 @@
     <title>Membuat Portofolio</title>
 </head>
 <body>
-
+    <div class="nav">
+        <ul>
+           <li><a href="index.html">biodata</a></li>
+           <li><a href="portofolio.html">portofolio</a></li>
+        </ul>
+    </div>
     <h1 id="judul">Jasminne's Portofolio</h1> 
     <img src="picture.jpg" alt="images"style="width:500px ; height: 250px;">
 
