--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         <title>Document</title>
     </head>
     <body>
+        <div class="nav">
+            <ul>
+               <li><a href="index.html">biodata</a></li>
+               <li><a href="portofolio.html">portofolio</a></li>
+            </ul>
         <h1 id="name">Jasminne Fridayanti Putri Safrida</h1>
             <img src="photo.png" alt="images"style="width:200px ; height: 300px;">
         <br> 
