--- a/portofolio.html
+++ b/portofolio.html
@@ -15,7 +15,7 @@
         </ul>
     </div>
     <h1 id="judul">Jasminne's Portofolio</h1> 
-    <img src="picture.jpg" alt="images"style="width:500px ; height: 250px;">
+    <img src="picture.jpg" alt="images" class="responsive">
 
     <table border="3">
         <tr>
