--- a/index.html
+++ b/index.html
@@ -1,40 +1,148 @@
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-        <title>Document</title>
-    </head>
-    <body>
-        <div class="nav">
-            <ul>
-               <li><a href="index.html">biodata</a></li>
-               <li><a href="portofolio.html">portofolio</a></li>
-            </ul>
-        <h1 id="name">Jasminne Fridayanti Putri Safrida</h1>
-            <img src="photo.png" alt="images"style="width:200px ; height: 300px;">
-        <br> 
-        <h2 id="desc">Tentang Saya</h2>
-            <p align="justify"> Saya adalah mahasiswa ilmu pemerintahan semester 5 di Universitas Muhammadiyah. <br> Saya memiliki kepribadian ambivert, dimana saya suka bertemu dengan orang baru tetapi suatu waktu saya memilih waktu untuk sendiri agar dapat menangkan pikiran.<br> Hobi saya adalah memasak, berpetualang, mendengarkan musik, dan scroll twitter. Saya bermimpi ingin sekali menjadi bagian dari Kementerian Negara.</p>
-        <h3 id="desc">Keahlian Saya</h3>
-            <ol>
-            <li>Public Speaking</li>
-            <li>Account Management</li>
-            <li>Public Relation</li>
-            <li>Research and Analyst</li>
-            <li>Leadership</li>
-            </ol>
-        <h4 id="desc">Pendidikan Saya</h4>
-            <ul>
-            <li>2020-Sekarang: Universitas Muhammadiyah Malang</li>
-            <li>2017-2020    : SMA Negeri 1 Tarakan</li>
-            <li>2015-2017    : SMP Negeri 2 Tarakan</li>
-            </ul>
-    <h5>Kontak Saya</h5>
-    <p><a href="https://www.instagram.com/jasminevt/">instagram</a></p>
-    <p><a href="https://www.linkedin.com/in/jasminnefridayanti/">Linkedin</a></p>
-    <p><a href="portofolio.html"> Portofolio</a></p>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>PORTOFOLIO</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/stylelagi.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,900;1,100;1,200;1,300;1,400;1,500;1,800&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg bg-light shadow p-3 sticky-top">
+      <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item">
+              <a class="nav-link fw-bold text-dark" aria-current="page" href="#">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-bold text-dark" href="#">Skill</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link fw-bold text-dark" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-    </body>
+      <!-- hero --> 
+      <div id="hero" class="container d-flex flex-column align-items-center justify-content-center mb-5">
+        <img src="ASSETCSS/me.JPG" class="images-hero rounded-circle" alt="">
+        <h1 class="title fw-bold">JASMINNE FRIDAYANTI PUTRI SAFRIDA </h1>
+        <p class="subtitle">Public Relation Enthusiast</p>
+        <i class="bi bi-arrow-down"></i>
+      </div>
+
+      <!--about me-->
+      <div id="about" class="container mb-5"  justify-content-center>
+            <h2 class="judul fw-bold" >Tentang Saya</h2>
+            <p class="deskripsi text-secondary lh-lg" align="justify"> Saat ini sedang menempuh Pendidikan sebagai mahasiswa Ilmu Pemerintahan di Universitas Muhammadiyah Malang. E-NFJ personaliti dengan keinginan belajar yang tinggi. saya merupakan seseorang yang selalu ingin meningkatkan kemampuan interpersonal dan intrapersonal yang baik dalam dirinya.  seorang yang terorganisir, memiliki kemampuan leadership, kemampuan menyelesaikan masalah, pendengar yang baik, dan mudah untuk bersosialisasi dengan orang baru. Saya tertarik dengan isu pemerintahan & politik, isu kesetaraan gender, dan gerakan para pemuda. Saya juga tertarik dalam kegiatan sosial seperti pengembangan potensi sumber daya manusia yang memiliki pengaruh perubahan ke masyarakat secara luas. </p>
+      </div>
+
+      <!-- skill -->
+    <div id="skill" class="container mb-5">
+        <h3 class="skill fw-bold">Skill & Kemampuan</h3>
+      <div class="row">
+        <div class="col-3">
+          <div class="card h-100">
+            <img src="./ASSETCSS/leadership.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="skill-title fw-bold">Leadership</h5>
+              <p class="card-text text-secondary" align="justify">Kemampuan kepemimpinan yang saya miliki dapat dilihat dari cara saya  mempengaruhi, mengarahkan, memotivasi dan mengawasi orang lain atau sebuah team untuk menyelesaikan tugas-tugas yang direncanakan untuk mencapai tujuan dan sasaran yang tepat</p>
+              <a href="#" class="btn btn-primary w-100">Show Details</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card h-100">
+            <img src="./ASSETCSS/product management.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="skill-title fw-bold">Project management</h5>
+              <p class="card-text text-secondary" align="justify">Dalam sebuah project ataupun event saya memiliki kemampuan untuk dapat memanagemen beberapa proses hingga mencapai tujuannya. terdapat beberapa proses yang harus dilakukan, mulai dari inisiasi, perencanaan, pelaksanaan, pengawasan hingga penutupan.</p>
+              <a href="#" class="btn btn-primary w-100">Show Details</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card h-100">
+            <img src="./ASSETCSS/public speaking.jpg" class="card-img-top" alt="...">
+            <div class="card-body h-100">
+              <h5 class="skill-title fw-bold">Public speaking</h5>
+              <p class="card-text text-secondary" align="justify">Kemampuan berbicara di depan banyak umum dan menyampaikan argumen secara lisan merupakan hal yang saya gemari, seni dalam berbicara juga melatih untuk Menyusun pola piker secara sistematis dan tahap demi tahap dengan tujuan agar pesan dapat dimengerti</p>
+              <a href="#" class="btn btn-primary w-100">Show Details</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card h-100">
+            <img src="./ASSETCSS/public relation.jpg" class="card-img-top w-100" alt="...">
+            <div class="card-body h-100">
+              <h5 class="skill-title fw-bold">Public Relation</h5>
+              <p class="card-text text-secondary" align="justify">Sebagai seorang public relation atau hubungan masyarakat tentunya saya memerlukan kemampuan mengenai cara bernegosisasi dan bagaimana cara untuk berinteraksi dengan berbagai macam stakeholder untuk dapat membantu menunjang kebutuhan organisasi.</p>
+              <a href="#" class="btn btn-primary w-100">Show Details</a>
+            </div>
+          </div>
+        </div>
+
+  <div class="row" style="margin-top:20px;">
+      <div class="col-3">
+      <div class="card h-100">
+            <img src="./ASSETCSS/designthinking.jpg" class="card-img-top w-100" alt="...">
+            <div class="card-body">
+              <h5 class="skill-title fw-bold">Design Thinking</h5>
+              <p class="card-text text-secondary" align="justify">Kemampuan berfikir dengan teori design thinking merupakan sebuah sistem berfikir dalam menyelesaikan masalah dengan berfokus pada apa yang sebenarnya  dibutuhkan oleh mayoritas user sehingga nantinya dapat menjadi solusi yang efektif dan reasonable</p>
+              <a href="#" class="btn btn-primary w-100">Show Details</a>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+
+
+      <!--contact me-->
+      <div id="contact" class="container mb-5">
+        <h1 class="text-center fw-bold nb-3">contact me</h1>
+        <form class="col-6 mx-auto">
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Name</label>
+            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Name">
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+          <button type="button" class="btn btn-primary w-100">Submit</button>
+        </form>
+      </div>
+
+      <!-- footer -->
+    <div class="container-fluid">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+          <div class="col-md-4 d-flex align-items-center">
+            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+              <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
+            </a>
+            <span class="mb-3 mb-md-0 text-muted">&copy; 2022 Company, Inc</span>
+          </div>
+
+          <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-instagram"></i></a></li>
+            <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-twitter"></i></a></li>
+            <li class="ms-3"><a class="text-muted" href="#"><i class="bi bi-linkedin"></i></a></li>
+          </ul>
+        </footer>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  </body>
 </html>
